--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,8 @@
-.content-body{
-    background-color: #f4f3f0;
-    height: 100vh;
-    overflow: hidden;
-}
+// .content-body{
+//     background-color: #f4f3f0;
+//     height: 100vh;
+//     overflow: hidden;
+// }
 /* static-page.component.css */
 // .content-body {
 //     height: 100vh;
