--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,15 +3,19 @@
 @import '~uikit/dist/css/uikit.min.css';
 
 
-*{
+*,html,body{
     box-sizing: border-box;
-    width: 100%;
-    
 }
 
-body{
-    box-sizing: border-box;
-    width: 100%;
-    height: 100vh;
+// *{
+//     box-sizing: border-box;
+//     width: 100%;
+    
+// }
+
+// body{
+//     box-sizing: border-box;
+//     width: 100%;
+//     height: 100vh;
   
-}
+// }
